--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "cakephp/cakephp": "~4.2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5 || ^9.3"
+        "phpunit/phpunit": "^8.5 || ^9.3",
+        "cakephp/cakephp-codesniffer": "~4.2.0"
     },
     "autoload": {
         "psr-4": {
@@ -29,5 +30,17 @@
             "Chialab\\Rna\\Test\\": "tests/",
             "Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
         }
+    },
+    "scripts": {
+        "check": [
+            "@test",
+            "@cs-check"
+        ],
+        "cs-check": "phpcs --colors -p  src/ tests/",
+        "cs-fix": "phpcbf --colors -p src/ tests/",
+        "test": "phpunit --colors=always"
+    },
+    "config": {
+        "sort-packages": true
     }
 }
