--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "cakephp/cakephp": "~4.2.0"
+        "cakephp/cakephp": "~3.10.0 || ~4.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5 || ^9.3",
