--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "cakephp/cakephp": "~3.10.0 || ~4.2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5 || ^9.3",
+        "phpunit/phpunit": "^6.0 || ^8.5 || ^9.3",
         "cakephp/cakephp-codesniffer": "~4.2.0"
     },
     "autoload": {
