--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,7 +44,7 @@ jobs:
         run: 'composer install --prefer-dist --no-interaction'
 
       - name: 'Run PHP CodeSniffer'
-        run: 'composer run-script cs-check'
+        run: 'composer run-script cs-check -- -n'
 
   unit:
     name: 'Run unit tests'
