chore: add allow plugins list to composer json

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
         "test": "phpunit --colors=always"
     },
     "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        },
         "sort-packages": true
     }
 }
