--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "cakephp/cakephp": "~3.9 || ~4.2"
+        "cakephp/cakephp": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0 || ^8.5 || ^9.3",
